# claimPilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: BUILD_PLAN.md  DEPLOYMENT_RUNBOOK.md  SPEC_DRIVEN_WORKFLOW.md  azure-cicd-setup.md
docs/decisions/: 002-checkpointer-vs-langgraph-saver.md
docs/specs/: 00-master-spec.md  10-deploy-azure.md  11-deploy-aws.md  12-deploy-gcp.md  20-agent-coverage.md  21-rag-pipeline.md  22-eval-metrics.md  README.md
evals/: metrics.py  run_evals.py
evals/golden/: cases.json
infra/iac/: main.bicep  parameters.json
src/claimpilot/: __init__.py
src/claimpilot/agents/: __init__.py  compliance.py  coverage.py  fraud_risk.py  settlement.py
src/claimpilot/agents/prompts/: __init__.py  compliance.py  coverage.py  fraud_risk.py  settlement.py
src/claimpilot/api/: auth.py  deps.py  main.py  schemas.py  worker.py  worker_main.py
src/claimpilot/api/routes/: claims.py  evals.py
src/claimpilot/graph/: __init__.py  build_graph.py  nodes.py  state.py
src/claimpilot/infra/: __init__.py  di.py  interfaces.py  settings.py
src/claimpilot/infra/providers/: __init__.py
src/claimpilot/infra/providers/azure/: __init__.py  _auth.py  checkpointer.py  doc_extractor.py  embedder.py  llm.py  queue.py  reranker.py  vector_store.py
src/claimpilot/infra/providers/fakes/: __init__.py  checkpointer.py  doc_extractor.py  embedder.py  llm.py  queue.py  reranker.py  (+1 more)
src/claimpilot/mcp_servers/: __init__.py  base.py  claims_history.py  fraud_signals.py  policy_db.py  regs.py
src/claimpilot/models/: __init__.py  claim.py  common.py  decisions.py  state.py  trace.py
src/claimpilot/observability/: __init__.py  azure_exporter.py  cost_meter.py  logging.py  tracer.py
src/claimpilot/rag/: __init__.py  bm25.py  chunker.py  ingest_corpus.py  models.py  pipeline.py
tests/: conftest.py  test_api_e2e.py  test_azure_providers.py  test_compliance_agent.py  test_coverage_agent.py  test_evals.py  test_fraud_risk_agent.py  test_graph_e2e.py  test_healthz.py  test_infra.py  test_m11_entrypoints.py  test_mcp_servers.py  test_models.py  test_observability.py  test_rag.py  test_settlement_agent.py
ui/: index.html
