[project]
name = "claimpilot"
version = "0.1.0"
description = "Autonomous insurance claims adjudication with multi-agent orchestration (LangGraph)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "structlog>=24.1",
    "tenacity>=8.3",
]

# Cloud SDKs are intentionally NOT here. They are added under optional groups
# only at the milestone that wires that provider (keeps the core provider-agnostic).
[project.optional-dependencies]
azure = [
    "openai>=1.40",                       # Azure OpenAI via openai SDK
    "azure-identity>=1.17",
    "azure-search-documents>=11.5",
    "azure-ai-documentintelligence>=1.0.0b3",
    "azure-servicebus>=7.12",
    "azure-cosmos>=4.7",
    "azure-keyvault-secrets>=4.8",
    "azure-monitor-opentelemetry>=1.6",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claimpilot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RET", "SIM", "TID"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_any_explicit = false  # set true later; require comments for Any
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
# Azure + OpenAI SDKs are optional (claimpilot[azure]); suppress missing-import
# errors so `mypy src` passes without the azure extra installed.
module = [
    "openai",
    "openai.*",
    "azure.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.claimpilot]
# App config defaults; overridden by env (pydantic-settings). PROVIDER selects the provider set.
provider = "fake"   # fake | azure | aws | gcp
